hice el responsive para tablets

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -26,9 +26,9 @@
     </header>
 
     <!--título principal-->
-    <h1 class="genres_titulo"> Lo mejor del POP </h1>
+    <h1 class="genres-detail-titulo"> Lo mejor del POP </h1>
 
-
+    
     <!--albumes-->
     <h1 class="title_home">Álbumes recomendados</h1>
 
@@ -131,7 +131,7 @@
                 <h4><a href="detail_artist.html">Taylor Swift</a> </h4>
              </article>
         </section>  
-
+   
 
     <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
             Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
