--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Hurrian</title>
 </head>
-<body class="home">
+<body>
     
         <!--cabecera-->
         <header>
@@ -31,8 +31,9 @@
             <h1 class="presen">La mejor música en un lugar</h1>
         </section>
 
-        <!--canciones-->
+         <!--canciones-->
         <h1 class="title_home">Canciones recomendadas</h1>
+
         <section class="track_home_conteiner">
             <article class="track_home">
                 <a href="detail_track.html"><img width="225px" src="./img/eyesclosedcancion.jpg" alt="Helsey track"></a>
@@ -130,7 +131,7 @@
             </article>
         </section>
 
-
+   
         <!--pie de página-->
         <footer>Copyright  <i class="far fa-copyright"></i>  2021 HURRIAN | Todos los derechos reservados |
             Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar"> Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
