modifiqué en header en responsive

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h3><a href="detail_track.html">Blinding Lights</a></h3>
             </article>
             
-            <article class="track_home last-item">
+            <article class="track_home">
                 <a href="detail_track.html"><img width="225px" src="./img/fondo.generos.techno.jpg" alt="Lose Control track"></a>
                 <h5><a href="detail_artist.html">MEDUZA</a> </h5>
                 <h3><a href="detail_track.html">Lose Control</a></h3>
@@ -94,7 +94,7 @@
                 <h3><a href="detail_album.html">Positions</a></h3>
             </article>  
 
-            <article class="album_track_home last-item">
+            <article class="album_track_home">
                 <a href="detail_album.html"><img src="./img/fondo.generos.rock.nacional.jpg" alt="pescado rabioso album"></a>
                 <h5><a href="detail_artist.html">Pescado Rabioso</a></h5>
                 <h3><a href="detail_album.html">Artaud</a></h3>
@@ -125,7 +125,7 @@
                 <h4><a href="detail_artist.html">Nathy Peluso</a></h4>
             </article>
     
-            <article class="artistas_home last-item" >
+            <article class="artistas_home" >
                 <a href="detail_artist.html"><img src="./img/fondo.generos.urbano.jpg" alt="artista imagen"></a>
                 <h4><a href="detail_artist.html">Bizarrap</a></h4>
             </article>
