correcion del footer

--- a/playlist.html
+++ b/playlist.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href= "css/styles.css">
+    <link rel="stylesheet" href= "./css/styles.css">
     <title>Playlist</title>
 </head>
 <body class="play">
@@ -104,8 +104,12 @@
         </div>
     </div>
     </section>
-    <footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
-        Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+
+    <footer> 
+        <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
+        <p>| Todos los derechos reservados |</p>
+        <p>Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a></p>
     </footer>
+    
 </body>
 </html>
