--- a/detail_album.html
+++ b/detail_album.html
@@ -56,8 +56,11 @@
         </div>
 </section>
 
-<footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
-    Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
+<footer> 
+    <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
+    <p>| Todos los derechos reservados |</p>
+    <p>Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a></p>
 </footer>
+
 </body>
 </html>
