--- a/detail_artist.html
+++ b/detail_artist.html
@@ -58,8 +58,11 @@
         <a href="https://yt3.ggpht.com/ytc/AAUvwngSvvbvAsrlJxe_ygGzA_3UEAbtnC7GjGS8wyS0hg=s900-c-k-c0x00ffffff-no-rj"><img width="218" class="galeria1" src="../proyecto_integrador/img/halsey7.jpg" alt="Foto de Halsey"></a>
     </section>
 
-<footer>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN | Todos los derechos reservados |
-    Contacto: <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a>
-</footer>
+    <footer> 
+        <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
+        <p>| Todos los derechos reservados |</p>
+        <p>Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a></p>
+    </footer>
+    
 </body>
 </html>
