--- a/playlist.html
+++ b/playlist.html
@@ -31,53 +31,48 @@
     <div class="track_home_conteiner">
         <div class="track_home">
             <div class="music-img">
-                <img src="img/Album.cover.halsey.jpg" width="200px">
+                <a href="detail_track.html"><img src="img/Album.cover.halsey.jpg" width="200px"></a>
              </div>
              <div class="music-name">
                 <h6>Without Me</h6>
                 <p>Halsey</p>
              </div>
-             <i class="fa fa-ellipsis-v"></i>
         </div>   
         <div class="track_home">
             <div class="music-img">
-                <img src="img/fondo.generos.urbano.jpg" width="200px">
+                <a href="detail_track.html"><img src="img/fondo.generos.urbano.jpg" width="200px"></a>
              </div>
              <div class="track_name">
                 <h6>L-Gante: Bzrp Music Session</Vol> </h6>
                 <p>Bizzarap, L-Gante</p>
              </div>
-             <i class="fa fa-ellipsis-v"></i>
         </div>
         <div class="track_home">
             <div class="music-img">
-                <img src="img/fondo.generos.rap.jpg" width="200px">
+                <a href="detail_track.html"><img src="img/fondo.generos.rap.jpg" width="200px"></a>
              </div>
              <div class="music-name">
                 <h6>Godzilla (feat. Juice WRLD)</h6>
                 <p>Eminem, Juice WRLD</p>
              </div>
-             <i class="fa fa-ellipsis-v"></i>
         </div>
         <div class="track_home">
             <div class="music-img">
-                <img src="img/fondo.generos.reggaeton.jpg" width="200px">
+                <a href="detail_track.html"><img src="img/fondo.generos.reggaeton.jpg" width="200px"></a>
              </div>
              <div class="music-name">
                 <h6>BOOKER T</h6>
                 <p>Bad Bunny</p>
              </div>
-             <i class="fa fa-ellipsis-v"></i>
         </div>
         <div class="track_home">
             <div class="music-img">
-                <img src="img/detalle.genero.theweekend.jpg" width="200px">
+                <a href="detail_track.html"><img src="img/detalle.genero.theweekend.jpg" width="200px"></a>
              </div>
              <div class="music-name">
                 <h6>Blinding Lights</h6>
                 <p>The Weeknd</p>
              </div>
-             <i class="fa fa-ellipsis-v"></i>
         </div> 
     </div>
     <div class= "music-play">
