cambios en detail artist

--- a/detail_artist.html
+++ b/detail_artist.html
@@ -37,10 +37,10 @@
             <h4 class="she2">Top tracks:
                 <ol class="toptracks">
                     <li class="top"><i class="far fa-play-circle"></i><a class="hal" href="detail_track.html"> Eyes Closed</a></li>
-                    <li class="top"><i class="far fa-play-circle"></i> Without Me</li>
-                    <li class="top"><i class="far fa-play-circle"></i> Closer</li>
-                    <li class="top"><i class="far fa-play-circle"></i> Be Kind (with Halsey)</li>
-                    <li class="top"><i class="far fa-play-circle"></i> Boy With Luv (feat Halsey)</li>
+                    <li class="top"><i class="far fa-play-circle"></i> <a class="hal" href="detail_track.html"> Without Me</a></li>
+                    <li class="top"><i class="far fa-play-circle"></i> <a class="hal" href="detail_track.html"> Closer</a></li>
+                    <li class="top"><i class="far fa-play-circle"></i> <a class="hal" href="detail_track.html">New Americana</a></li>
+                    <li class="top"><i class="far fa-play-circle"></i> <a class="hal" href="detail_track.html">Be Kind (with Halsey)</a></li>
                 </ol>
             </h4>
             <h4 class="she2"> <a class="halsi" href="http://www.iamhalsey.com/">Ver más</a></h4>
