--- a/detail_album.html
+++ b/detail_album.html
@@ -32,11 +32,13 @@
          <div class="imgartist">
             <img width="400px"  class="detalle" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
         </div>
+
+
         <div class="info">
             <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
             <h4 class="halsey">Género:<a class="hal" href="detail-genres.html"> Pop, R&B, synth-pop, electropop</a></h4>
             <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
-            <h4 class="lista2" class="lista2">Lista de canciones:
+            <h4 class="halsey">Lista de canciones:
                 <ul class="lista1">
                     <li class="top"><a class="hal" href="detail_track.html">The Prologue </a></li>
                     <li class="top"><a class="hal" href="detail_track.html">100 Letters</a></li>
