--- a/playlist.html
+++ b/playlist.html
@@ -28,76 +28,76 @@
 
     <section class="music-container">
        <h1 class="titulo-playlist">Mi Playlist</h1>
-    <div class="track_home_conteiner">
-        <div class="track_home">
-            <div class="music-img">
+    <article class="track_home_conteiner">
+        <article class="track_home">
+            <article class="music-img">
                 <a href="detail_track.html"><img src="img/Album.cover.halsey.jpg" width="200px"></a>
-             </div>
-             <div class="music-name">
+            </article>
+             <article class="music-name">
                 <h6>Without Me</h6>
                 <p>Halsey</p>
-             </div>
-        </div>   
-        <div class="track_home">
-            <div class="music-img">
+             </article>
+        </article>   
+        <article class="track_home">
+            <article class="music-img">
                 <a href="detail_track.html"><img src="img/fondo.generos.urbano.jpg" width="200px"></a>
-             </div>
-             <div class="track_name">
+            </article>
+             <article class="track_name">
                 <h6>L-Gante: Bzrp Music Session</Vol> </h6>
                 <p>Bizzarap, L-Gante</p>
-             </div>
-        </div>
-        <div class="track_home">
-            <div class="music-img">
+             </article>
+            </article>
+        <article class="track_home">
+            <article class="music-img">
                 <a href="detail_track.html"><img src="img/fondo.generos.rap.jpg" width="200px"></a>
-             </div>
-             <div class="music-name">
+            </article>
+             <article class="music-name">
                 <h6>Godzilla (feat. Juice WRLD)</h6>
                 <p>Eminem, Juice WRLD</p>
-             </div>
-        </div>
-        <div class="track_home">
-            <div class="music-img">
+             </article>
+        </article>
+        <article class="track_home">
+            <article class="music-img">
                 <a href="detail_track.html"><img src="img/fondo.generos.reggaeton.jpg" width="200px"></a>
-             </div>
-             <div class="music-name">
+            </article>
+             <article class="music-name">
                 <h6>BOOKER T</h6>
                 <p>Bad Bunny</p>
-             </div>
-        </div>
-        <div class="track_home">
-            <div class="music-img">
+             </article>
+        </article>
+        <article class="traeck_home">
+            <article class="music-img">
                 <a href="detail_track.html"><img src="img/detalle.genero.theweekend.jpg" width="200px"></a>
-             </div>
-             <div class="music-name">
+            </article>
+             <article class="music-name">
                 <h6>Blinding Lights</h6>
                 <p>The Weeknd</p>
-             </div>
-        </div> 
-    </div>
-    <div class= "music-play">
-        <div class="play-img">
+             </article>
+        </article> 
+    </article>
+    <article class= "music-play">
+        <article class="play-img">
             <img src="img/Album.cover.halsey.jpg">
-        </div>
-        <div class= "play-controlers">
-            <div class="controls">
-                <div class="song-name">
+        </article>
+        <article class= "play-controlers">
+            <article class="controls">
+                <article class="song-name">
                     <h5>Without Me</h5>
                     <p>Halsey</p>
-                </div>
-                <div class="play-icon">
+                </article>
+                <article class="play-icon">
                     <i class="fa fa-step-backward"></i>
                     <i class="fa fa-play"></i>
                     <i class="fa fa-step-forward"></i>
-                </div>
-            </div>
-            <div class="music-progress">
-            <div class="progress">
-            <div class="progress-bar"></div>    
-            </div>
-            </div>
-        </div>
-    </div>
+                </article>
+            </article>
+            <article class="music-progress">
+            <article class="progress">
+            <article class="progress-bar"></article>    
+            </article>
+        </article>
+        </article>
+    </article>
     </section>
 
     <footer> 
