cambios en la prolijidad

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -13,10 +13,12 @@
 
     <!--cabecera-->
     <header>
+
         <form action="search-results.html" method="GET">
             <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
             <button type="submit">Buscar</button>
         </form>
+        
         <ul class="menu">
             <li> <a class="pre" href="index.html">  Home  </a></li>
             <li><a class="pre"  href="genres.html">  Géneros  </a></li>
@@ -97,6 +99,7 @@
             <h5><a href="detail_artist.html">Lady Gaga</a> </h5>
             <h3><a href="detail_track.html">Rain on me</a></h3>
         </article>
+
     </section>
 
     <!--artistas-->
@@ -106,8 +109,7 @@
 
             <article class="artistas_home">  
                 <a href="detail_artist.html"><img src="./img/detalle.genero.artista.dua.jpg" alt="artista imagen"></a>
-                <h4><a href="detail_artist.html">Dua Lipa</a></h4>
-                     
+                <h4><a href="detail_artist.html">Dua Lipa</a></h4>                   
             </article>  
 
             <article class="artistas_home">          
@@ -118,7 +120,6 @@
             <article class="artistas_home">    
                 <a href="detail_artist.html"><img width="219px" src="./img/detalle.genero.artista.helsey.jpg" alt="artista imagen"></a>
                 <h4><a href="detail_artist.html">Halsey</a></h4>
-
             </article>
 
             <article class="artistas_home">
@@ -132,7 +133,7 @@
              </article>
         </section>  
    
-
+    <!--pie de página-->
     <footer> 
         <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
         <p>| Todos los derechos reservados |</p>
