--- a/detail_album.html
+++ b/detail_album.html
@@ -11,28 +11,34 @@
 </head>
 <body>
 
+    <!--cabecera-->
     <header>
+
         <form action="search-results.html" method="GET">
             <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
             <button type="submit">Buscar</button>
         </form>
+
         <ul class="menu">
             <li> <a class="pre" href="index.html">  Home  </a></li>
             <li><a class="pre"  href="genres.html">  Géneros  </a></li>
             <li><a  class="pre" href="playlist.html">  Mi playlist  </a></li>
             <li class="logo"><img width="40px" src="./img/logo.hurrian.blanco.png" alt="Logo"></li>
         </ul>
+        
     </header>
-
+  
+    <!--título principal-->
     <section class="album">
         <h1 class="dom">Hopeless Fountain Kingdom</h1>
     </section>
 
+    <!--información sobre el album-->
     <section class="artist">
+
          <div class="imgartist">
             <img width="400px"  class="detalle" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
         </div>
-
 
         <div class="info">
             <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
@@ -56,13 +62,15 @@
                 </ul>
             </h4>
         </div>
-</section>
 
-<footer> 
-    <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
-    <p>| Todos los derechos reservados |</p>
-    <p>Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a></p>
-</footer>
+    </section>
+
+    <!--pie de página-->
+    <footer> 
+        <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
+        <p>| Todos los derechos reservados |</p>
+        <p>Contacto:  <a class="foot" href="mailto:ccanoriohellwing@udesa.edu.ar">   Carolina Canorio, </a> <a class="foot" href="mailto:fmainardi@udesa.edu.ar">Franco Mainardi, </a><a class="foot" href="mailto:abuccierorodriguez@udesa.edu.ar">Quillén Bucciero</a></p>
+    </footer>
 
 </body>
 </html>
