--- a/playlist.html
+++ b/playlist.html
@@ -13,68 +13,96 @@
 </head>
 <body class="play">
 
+    <!--cabecera-->
     <header>
+
         <form action="search-results.html" method="GET">
             <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
             <button type="submit">Buscar</button>
         </form>
+
         <ul class="menu">
             <li> <a class="pre" href="index.html">  Home  </a></li>
             <li><a class="pre"  href="genres.html">  Géneros  </a></li>
             <li><a  class="pre" href="playlist.html">  Mi playlist  </a></li>
             <li class="logo"><img width="40px" src="./img/logo.hurrian.blanco.png" alt="Logo"></li>
         </ul>
+
     </header>
 
     <section class="music-container">
+
        <h1 class="titulo-playlist">Mi Playlist</h1>
-    <article class="track_home_conteiner">
+
+       <article class="track_home_conteiner">
+
+            <article class="track_home">
+
+                <article class="music-img">
+                    <a href="detail_track.html"><img src="img/Album.cover.halsey.jpg" width="200px"></a>
+                </article>
+
+               <article class="music-name">
+                    <h6>Without Me</h6>
+                    <p>Halsey</p>
+               </article>
+            
+            </article>   
+
         <article class="track_home">
-            <article class="music-img">
-                <a href="detail_track.html"><img src="img/Album.cover.halsey.jpg" width="200px"></a>
-            </article>
-             <article class="music-name">
-                <h6>Without Me</h6>
-                <p>Halsey</p>
-             </article>
-        </article>   
-        <article class="track_home">
+
             <article class="music-img">
                 <a href="detail_track.html"><img src="img/fondo.generos.urbano.jpg" width="200px"></a>
             </article>
-             <article class="track_name">
+
+            <article class="track_name">
                 <h6>L-Gante: Bzrp Music Session</Vol> </h6>
                 <p>Bizzarap, L-Gante</p>
-             </article>
             </article>
+
+        </article>
+
         <article class="track_home">
+
             <article class="music-img">
                 <a href="detail_track.html"><img src="img/fondo.generos.rap.jpg" width="200px"></a>
             </article>
+
              <article class="music-name">
                 <h6>Godzilla (feat. Juice WRLD)</h6>
                 <p>Eminem, Juice WRLD</p>
              </article>
+
         </article>
+
         <article class="track_home">
+
             <article class="music-img">
                 <a href="detail_track.html"><img src="img/fondo.generos.reggaeton.jpg" width="200px"></a>
             </article>
-             <article class="music-name">
+
+            <article class="music-name">
                 <h6>BOOKER T</h6>
                 <p>Bad Bunny</p>
-             </article>
+            </article>
+
         </article>
+
         <article class="traeck_home">
+
             <article class="music-img">
                 <a href="detail_track.html"><img src="img/detalle.genero.theweekend.jpg" width="200px"></a>
             </article>
+
              <article class="music-name">
                 <h6>Blinding Lights</h6>
                 <p>The Weeknd</p>
-             </article>
+            </article>
+
         </article> 
-    </article>
+    
+    </section>
+
     <article class= "music-play">
         <article class="play-img">
             <img src="img/Album.cover.halsey.jpg">
@@ -100,6 +128,7 @@
     </article>
     </section>
 
+    <!--pie de página-->
     <footer> 
         <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
         <p>| Todos los derechos reservados |</p>
