--- a/search-results.html
+++ b/search-results.html
@@ -11,23 +11,29 @@
 </head>
 <body>
 
+    <!--cabecera-->
     <header>
+
         <form action="search-results.html" method="GET">
             <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
             <button type="submit">Buscar</button>
         </form>
+
         <ul class="menu">
             <li> <a class="pre" href="index.html">  Home  </a></li>
             <li><a class="pre"  href="genres.html">  Géneros  </a></li>
             <li><a  class="pre" href="playlist.html">  Mi playlist  </a></li>
             <li class="logo"><img width="40px" src="./img/logo.hurrian.blanco.png" alt="Logo"></li>
         </ul>
-    </header>
 
+    </header>
+  
+    <!--título principal-->
     <section>
         <h1 class="search">Resultados de búsqueda.</h1>
     </section>
-
+    
+    <!--resultados de búsqueda Dua Lipa-->
     <h3 class="result1">"Dua Lipa"</h3>
 
     <article class="contenedor_artistas_home">
@@ -49,6 +55,7 @@
 
     </article>
 
+    <!--resultados de búsqueda Rock Nacional-->
     <h3 class="result1">"Rock Nacional"</h3>
 
     <article class="contenedor_artistas_home">
@@ -60,6 +67,7 @@
 
     </article>
 
+    <!--resultados de búsqueda Hopeless Fountain Kingdom-->
     <h3 class="result1">"Hopeless Fountain Kingdom"</h3>
 
     <article class="contenedor_artistas_home">
@@ -86,11 +94,13 @@
 
     </article>
 
+    <!--resultados de búsqueda Cover-->
     <section class="busqueda1">
         <h3 class="result1">"Cover Dua Lipa"</h3>
         <h4 class="result0">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h4>
     </section>
 
+    <!--pie de página-->
     <footer> 
         <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
         <p>| Todos los derechos reservados |</p>
