--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h1 class="title_home">Álbumes recomendados</h1>
 
         <section class="album_track_home_conteiner">
-            
+
             <article class="album_track_home">
                 <a href="detail_album.html"><img src="./img/fondo.generos.pop.jpg" alt="Helsey album"></a>
                 <h5><a href="detail_artist.html">Halsey</a> </h5>
@@ -140,7 +140,8 @@
 
         </section>
 
-   
+        <p class="arriba"><i class="fas fa-arrow-up"></i>Top</p>
+
         <!--pie de página-->
         <footer> 
             <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
