arregle error de css en página playlist

--- a/playlist.html
+++ b/playlist.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css>
-    <link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href= "./css/styles.css">
@@ -55,7 +53,7 @@
                 <a href="detail_track.html"><img src="img/fondo.generos.urbano.jpg" width="200px"></a>
             </article>
 
-            <article class="track_name">
+            <article class="music-name">
                 <h6>L-Gante: Bzrp Music Session</Vol> </h6>
                 <p>Bizzarap, L-Gante</p>
             </article>
