terminé botón go to top

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -133,6 +133,11 @@
                 <h4><a href="detail_artist.html">Taylor Swift</a> </h4>
              </article>
         </section>  
+
+    <!--go to top-->
+        <article class="arriba-conteiner">
+            <p class="arriba"><a href="#"> <i class="fas fa-arrow-up"></i></a></p>
+            </article>
    
     <!--pie de página-->
     <footer> 
