--- a/genres.html
+++ b/genres.html
@@ -114,7 +114,12 @@
             <h4><a href="detail-genres.html">Hip Hop</a></h4>
         </article>  
 
-    </section>  
+    </section> 
+    
+    <!--go to top-->
+    <article class="arriba-conteiner">
+        <p class="arriba"><a href="#"> <i class="fas fa-arrow-up"></i></a></p>
+        </article>
          
     <!--pie de página-->
     <footer> 
