--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
             </article>
 
         </section>
-
-        <p class="arriba"><i class="fas fa-arrow-up"></i>Top</p>
+        
+            <article class="arriba-conteiner">
+            <p class="arriba"><a href="#"> <i class="fas fa-arrow-up"></i></a></p>
+            </article>
 
         <!--pie de página-->
         <footer> 
