--- a/search-results.html
+++ b/search-results.html
@@ -100,6 +100,11 @@
         <h4 class="result0">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h4>
     </section>
 
+    <!--go to top-->
+    <article class="arriba-conteiner">
+        <p class="arriba"><a href="#"> <i class="fas fa-arrow-up"></i></a></p>
+        </article>
+
     <!--pie de página-->
     <footer> 
         <p>Copyright <i class="far fa-copyright"></i> 2021 HURRIAN </p>
