cambios en la leyenda

--- a/search-results.html
+++ b/search-results.html
@@ -97,13 +97,13 @@
     <!--resultados de búsqueda Cover-->
     <section class="busqueda1">
         <h3 class="result1">"Cover Dua Lipa"</h3>
-        <h4 class="result0">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h4>
+        <h4 class="leyenda">Lo sentimos, no se han encontrado resultados para tu búsqueda.</h4>
     </section>
 
     <!--go to top-->
     <article class="arriba-conteiner">
         <p class="arriba"><a href="#"> <i class="fas fa-arrow-up"></i></a></p>
-        </article>
+    </article>
 
     <!--pie de página-->
     <footer> 
