--- a/detail_album.html
+++ b/detail_album.html
@@ -45,7 +45,7 @@
             <h4 class="halsey">Género:<a class="hal" href="detail-genres.html"> Pop, R&B, synth-pop, electropop</a></h4>
             <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
             <h4 class="halsey">Lista de canciones:
-                <ul class="lista1">
+                <ol class="lista1">
                     <li class="top"><a class="hal" href="detail_track.html">The Prologue </a></li>
                     <li class="top"><a class="hal" href="detail_track.html">100 Letters</a></li>
                     <li class="top"><a class="hal" href="detail_track.html">Eyes Closed</a></li>
@@ -59,7 +59,7 @@
                     <li class="top"><a class="hal" href="detail_track.html">Strangers</a></li>
                     <li class="top"><a class="hal" href="detail_track.html">Devil In Me</a></li>
                     <li class="top"><a class="hal" href="detail_track.html">Hopeless</a></li>
-                </ul>
+                </ol>
             </h4>
         </div>
 
