cambios en search results

--- a/search-results.html
+++ b/search-results.html
@@ -73,7 +73,7 @@
     <article class="contenedor_artistas_home">
 
         <section class="artistas_home">
-            <a href="detail-genres.html"> <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="Hopeless Fountain Kingdom"> </a>
+            <a href="detail_album.html"> <img src="../proyecto_integrador/img/fondo.generos.pop.jpg" alt="Hopeless Fountain Kingdom"> </a>
             <h4 class="result0"> <a class="result2" href="detail_album.html">Album: Hopeless Fountain Kingdom</a></h4>
         </section>
 
