cambios en la prolijidad y detalles

--- a/detail_album.html
+++ b/detail_album.html
@@ -23,7 +23,7 @@
             <li> <a class="pre" href="index.html">  Home  </a></li>
             <li><a class="pre"  href="genres.html">  Géneros  </a></li>
             <li><a  class="pre" href="playlist.html">  Mi playlist  </a></li>
-            <li class="logo"><img width="40px" src="./img/logo.hurrian.blanco.png" alt="Logo"></li>
+            <li class="logo"><img width="50px" src="./img/logo.hurrian.blanco.png" alt="Logo"></li>
         </ul>
         
     </header>
@@ -40,7 +40,7 @@
             <img width="400px"  class="detalle" src="../proyecto_integrador/img/Album.cover.halsey.jpg" alt="Foto del Album">
         </div>
 
-        <div class="info">
+        <aside class="info">
             <h4 class="halsey">Artista:<a class="hal" href="detail_artist.html"> Halsey</a></h4>
             <h4 class="halsey">Género:<a class="hal" href="detail-genres.html"> Pop, R&B, synth-pop, electropop</a></h4>
             <h4 class="halsey">Fecha de publicación: 2 de junio de 2017 </h4>
@@ -61,7 +61,7 @@
                     <li class="top"><a class="hal" href="detail_track.html">Hopeless</a></li>
                 </ol>
             </h4>
-        </div>
+        </aside>
 
     </section>
 
