--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li> <a class="pre" href="index.html">  Home  </a></li>
                 <li><a class="pre"  href="genres.html">  Géneros  </a></li>
                 <li><a  class="pre" href="playlist.html">  Mi playlist  </a></li>
-                <li class="logo"><img width="40px" src="./img/logo.hurrian.blanco.png" alt="Logo"></li>
+                <li class="logo"><img width="50px" src="./img/logo.hurrian.blanco.png" alt="Logo"></li>
             </ul>
 
         </header>
@@ -89,7 +89,7 @@
             </article> 
             
             <article class="album_track_home">
-                <a href="detail-genres.html"><img src="./img/fondo.generos.rock.alternativo.jpg" alt="the strokes album"></a>
+                <a href="detail_album.html"><img src="./img/fondo.generos.rock.alternativo.jpg" alt="the strokes album"></a>
                 <h5><a href="detail_artist.html">The Strokes</a></h5>
                 <h3><a href="detail_album.html">The New Abnormal</a></h3>
             </article> 
