--- a/playlist.html
+++ b/playlist.html
@@ -80,13 +80,13 @@
             </article>
 
             <article class="music-name">
-                <h6>BOOKER T</h6>
+                <h6>Booker T</h6>
                 <p>Bad Bunny</p>
             </article>
 
         </article>
 
-        <article class="traeck_home">
+        <article class="track_home">
 
             <article class="music-img">
                 <a href="detail_track.html"><img src="img/detalle.genero.theweekend.jpg" width="200px"></a>
