--- a/detail_artist.html
+++ b/detail_artist.html
@@ -15,7 +15,7 @@
     <header>
 
         <form action="search-results.html" method="GET">
-            <input type="search" name="Buscar" placeholder="Buscar en Hurrian">
+            <input type="search" name="Buscar" value=""  placeholder="Buscar en Hurrian">
             <button type="submit">Buscar</button>
         </form>
 
